Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -68,7 +68,7 @@
   "mn79:9.7": "„Aber was ist dieser höchste Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist?“ ",
   "mn79:9.8": "„Herr, der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.“ ",
   "mn79:10.1": "„Udāyī, du könntest noch lange so fortfahren. ",
-  "mn79:10.2": "Du sagst: ‚Die höchste Herrlichkeit ist die Herrlichkeit, verglichen mit der keine andere Herrlichkeit erlesener ist.‘ Aber du beschreibst diese Herrlichkeit nicht. ",
+  "mn79:10.2": "Du sagst: ‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ Aber du beschreibst diesen Glanz nicht. ",
   "mn79:10.3": "Angenommen, ein Mann würde sagen: ",
   "mn79:10.4": "‚Ganz gleich, wer die erlesenste Dame im Land ist, sie ist es, die ich will, die ich begehre!‘ ",
   "mn79:10.5": "Man würde zu ihm sagen: ",
