Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -88,5 +88,6 @@
   "mn79:12.1": "„Was denkst du, Udāyī? ",
   "mn79:12.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: das Schmuckstück aus Beryll, das auf ein cremefarbenes Tuch gelegt wurde, oder ein Glühwürmchen im Dunkel der Nacht?“ ",
   "mn79:12.3": "„Ein Glühwürmchen im Dunkel der Nacht, Herr.“ ",
-  "mn79:13.1": "„Was denkst du, Udāyī? "
+  "mn79:13.1": "„Was denkst du, Udāyī? ",
+  "mn79:13.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: ein Glühwürmchen im Dunkel der Nacht oder eine Öllampe im Dunkel der Nacht?“ "
 }
