Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -91,5 +91,6 @@
   "mn79:13.1": "„Was denkst du, Udāyī? ",
   "mn79:13.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: ein Glühwürmchen im Dunkel der Nacht oder eine Öllampe im Dunkel der Nacht?“ ",
   "mn79:13.3": "„Eine Öllampe im Dunkel der Nacht, Herr.“ ",
-  "mn79:14.1": "„Was denkst du, Udāyī? "
+  "mn79:14.1": "„Was denkst du, Udāyī? ",
+  "mn79:14.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine Öllampe im Dunkel der Nacht oder eine große Feuersbrunst im Dunkel der Nacht?“ "
 }
