--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti96:3.2": "che dell’esistenza, ",
   "iti96:3.3": "le creature girovagano per il Saṁsāra ",
   "iti96:3.4": "dirette verso nascita e morte. ",
-  "iti96:4.1": "Chi annienta il piacere ",
+  "iti96:4.1": "Chi annienta il piacere dei sensi ",
   "iti96:4.2": "senza portare a termine l’eliminazione delle compulsioni, ",
   "iti96:4.3": "ed è ancora soggiogato dall’esistenza, ",
   "iti96:4.4": "quello è detto uno che non ritorna. ",
