--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -96,5 +96,6 @@
   "mn79:14.3": "„Eine große Feuersbrunst im Dunkel der Nacht, Herr.“ ",
   "mn79:15.1": "„Was denkst du, Udāyī? ",
   "mn79:15.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: eine große Feuersbrunst im Dunkel der Nacht oder der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen?“ ",
-  "mn79:15.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr.“ "
+  "mn79:15.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr.“ ",
+  "mn79:16.1": "„Was denkst du, Udāyī? "
 }
