--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti96:3.3": "le creature girovagano per il Saṁsāra ",
   "iti96:3.4": "dirette verso nascita e morte. ",
   "iti96:4.1": "Chi annienta il piacere dei sensi ",
-  "iti96:4.2": "senza raggiungere l’eliminazione delle compulsioni, ",
+  "iti96:4.2": "senza raggiungere l’eliminazione delle compulsioni ",
   "iti96:4.3": "ed è ancora soggiogato dall’esistenza, ",
   "iti96:4.4": "quello è detto uno che non ritorna. ",
   "iti96:5.1": "Ma chi ha eliminato ogni dubbio ",
