Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -13,5 +13,5 @@
   "iti96:5.1": "Ma chi ha eliminato ogni dubbio ",
   "iti96:5.2": "e ha messo fine a ogni identificazione* e futura rinascita* ",
   "iti96:5.3": "ha davvero raggiunto l’altra sponda in questo mondo ",
-  "iti96:5.4": "e ottenuto la distruzione degli impulsi. "
+  "iti96:5.4": "e ottenuto la distruzione delle compulsioni. "
 }
