--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -99,5 +99,6 @@
   "mn79:15.3": "„Der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen, Herr.“ ",
   "mn79:16.1": "„Was denkst du, Udāyī? ",
   "mn79:16.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: der Morgenstern am klaren und wolkenlosen Himmel beim ersten Morgengrauen oder der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag?“ ",
-  "mn79:16.3": "„Der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag, Herr.“ "
+  "mn79:16.3": "„Der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag, Herr.“ ",
+  "mn79:17.1": "„Was denkst du, Udāyī? "
 }
