--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti96:2.2": "Uno che non è sotto il giogo dei piaceri dei sensi, ma è sotto il giogo dell’esistenza, è detto uno che non ritorna, perché non torna a questo stato. ",
   "iti96:2.3": "Uno che non è sotto né il giogo dei piaceri dei sensi, né quello dell’esistenza, è detto un Arahant, uno che ha distrutto* ogni compulsione.* ",
   "iti96:3.1": "Sotto il giogo dei piaceri dei sensi, ",
-  "iti96:3.2": "che dell’esistenza, ",
+  "iti96:3.2": "e dell’esistenza, ",
   "iti96:3.3": "le creature girovagano per il Saṁsāra ",
   "iti96:3.4": "dirette verso nascita e morte. ",
   "iti96:4.1": "Chi annienta il piacere dei sensi ",
