--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti97:2.1": "Cercatori, in questo Dhamma e Vinaya un cercatore che ha buona virtù, buona natura e buona saggezza è detto perfetto, realizzato, una persona superiore. ",
   "iti97:3.1": "E in che modo un cercatore ha una buona virtù? ",
-  "iti97:3.2": "Quando un cercatore vive virtuoso, temperato e moderato (contenuto) dal pātimokkha, dalla condotta e questua perfetta, vedendo il pericolo negli errori più piccoli, si allena (esercita/pratica) avendo preso i precetti. ",
+  "iti97:3.2": "Quando un cercatore vive virtuoso, temperato e moderato (contenuto) dal pātimokkha, dalla condotta perfetta e questua appropriata, vedendo il pericolo negli errori più piccoli, si allena (esercita/pratica) avendo preso i precetti. ",
   "iti97:4.1": "E in che modo un cercatore ha una buona natura? ",
   "iti97:4.2": "Qui un cercatore vive devoto alla coltivazione del cuore secondo i sette profili legati all’illuminazione. ",
   "iti97:5.1": "E in che modo un cercatore ha una buona sapienza? ",
