--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -3,6 +3,7 @@
   "viewoption:activateChineseLookup": "တရုတ်စကားလုံး ရှာဖွေမှု စရန်",
   "viewoption:activatePaliDescription": "ပါဠိစာများကို လေ့လာသုံးသပ်ပြီး အဓိပ္ပါယ်များကို ဖော်ပြထားပါသည်။ အဓိပ္ပါယ်များကို အထောက်အကူပြုအဖြစ် သုံးရန်သာဖြစ်သည်။ အမြဲအတိမကျ မရနိုင်သည်ကို သတိပြုပါ။ စကားလုံး အဓိပ္ပါယ်များမှာ New Concise Pali English Dictionary မှ ဖြစ်သည်။",
   "viewoption:activatePaliLookup": "ပါဠိစကားလုံးရှာဖွေမှု စရန်",
+  "viewoption:allRefsDisabled": "အညွှန်းအားလုံးကို ပိတ်ထားပါသည်။ ",
   "viewoption:asterisk": "မှတ်ချက်များကို (*) ပေါ်တွင်ဖော်ပြမည်",
   "viewoption:changePaliScript": "ပါဠိအက္ခရာပြောင်းရန်",
   "viewoption:changePaliScriptDescription": "ဤလုပ်ဆောင်ချက်သည် သင့်အား ပါဠိစာများကို ဘာသာအက္ခရာ အမျိုးမျိုးဖြင့်  ဖတ်စေနိုင်ပါသည်။ ",
@@ -29,10 +30,10 @@
   "viewoption:rememberSettings": "စက်တင်များကို မှတ်ထားပါ။",
   "viewoption:scriptChanged": "ယခုပါဠိကို {paliScript} အက္ခရာဖြင့် ဖော်ပြထားသည်။",
   "viewoption:showHighlighting": "ထင်ထင်ရှားရှားပြသောစာ - အရေးကြီး အသေးစိတ်အချက်များ",
-  "viewoption:showHighlightingTitle": "ထင်ထင်ရှားရှားဖော်ပြပါ",
   "viewoption:showHighlightingDescription": "သက်ဆိုင်ရာနေရာများတွင် စာမူကွဲများ၊ အမှားပြင်ဆင်ချက်များ၊ တည်ဆောက်ထားပုံ အစရှိသည့်အသေးစိတ်စာသားများကို ထင်ထင်ရှားရှားဖော်ပြပါ။",
   "viewoption:showHighlightingDisabled": "ထင်ထင်ရှားရှား စာဖော်ပြခြင်း ကိုပိတ်ထားသည်။",
   "viewoption:showHighlightingEnabled": "ထင်ထင်ရှားရှား စာဖော်ပြခြင်း ကိုဖွင့်ထားသည်။",
+  "viewoption:showHighlightingTitle": "ထင်ထင်ရှားရှားဖော်ပြပါ",
   "viewoption:sideBySide": "ဘေးချင်းယှဉ်လျက်",
   "viewoption:sidenotes": "မှတ်စုများကို ဘေးတွင်ဖော်ပြရန်",
   "viewoption:textView": "မူရင်းစာနှင့် ဘာသာပြန်",
