Translations by amaung to translation/my/site/viewoption_translation-my-site.json

--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -4,6 +4,7 @@
   "viewoption:activatePaliDescription": "ပါဠိစာများကို လေ့လာသုံးသပ်ပြီး အဓိပ္ပါယ်များကို ဖော်ပြထားပါသည်။ အဓိပ္ပါယ်များကို အထောက်အကူပြုအဖြစ် သုံးရန်သာဖြစ်သည်။ အမြဲအတိမကျ မရနိုင်သည်ကို သတိပြုပါ။ စကားလုံး အဓိပ္ပါယ်များမှာ New Concise Pali English Dictionary မှ ဖြစ်သည်။",
   "viewoption:activatePaliLookup": "ပါဠိစကားလုံးရှာဖွေမှု စရန်",
   "viewoption:allRefsDisabled": "အညွှန်းအားလုံးကို ပိတ်ထားပါသည်။ ",
+  "viewoption:allRefsEnabled": "အညွှန်းအားလုံးကို ဖွင့်ထားပါသည်။ ",
   "viewoption:asterisk": "မှတ်ချက်များကို (*) ပေါ်တွင်ဖော်ပြမည်",
   "viewoption:changePaliScript": "ပါဠိအက္ခရာပြောင်းရန်",
   "viewoption:changePaliScriptDescription": "ဤလုပ်ဆောင်ချက်သည် သင့်အား ပါဠိစာများကို ဘာသာအက္ခရာ အမျိုးမျိုးဖြင့်  ဖတ်စေနိုင်ပါသည်။ ",
