--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -14,7 +14,7 @@
   "viewoption:lineByLine": "တစ်လိုင်းချင်း",
   "viewoption:lookup": "ရှာဖွေရန်",
   "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ။",
-  "viewoption:mainRefsDisabled": "အဓိက အညွှန်းများကို ပိတ်ထားပါသည် ",
+  "viewoption:mainRefsDisabled": "အဓိက အညွှန်းများကို ပိတ်ထားသည် ",
   "viewoption:mainRefsEnabled": "အဓိက အညွှန်းများကို ဖွင့်ထားပါသည် ",
   "viewoption:none": "မရွေးပါ",
   "viewoption:noteDescription": "ဇာစ်မြစ်စာများအတွက် ဘာသာပြန်များနှင့် မူကွဲဖတ်စာများအပေါ်ရေးထားသော မှတ်ချက်များရှိခဲ့လျှင် ကြည့်နိုင်ပါသည်။",
