--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -15,7 +15,7 @@
   "viewoption:lookup": "ရှာဖွေရန်",
   "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ။",
   "viewoption:mainRefsDisabled": "အဓိက အညွှန်းများကို ပိတ်ထားသည် ",
-  "viewoption:mainRefsEnabled": "အဓိက အညွှန်းများကို ဖွင့်ထားပါသည် ",
+  "viewoption:mainRefsEnabled": "အဓိက အညွှန်းများကို ဖွင့်ထားသည် ",
   "viewoption:none": "မရွေးပါ",
   "viewoption:noteDescription": "ဇာစ်မြစ်စာများအတွက် ဘာသာပြန်များနှင့် မူကွဲဖတ်စာများအပေါ်ရေးထားသော မှတ်ချက်များရှိခဲ့လျှင် ကြည့်နိုင်ပါသည်။",
   "viewoption:noteDisplayTypeToastAsterisk": "မှတ်စုများ ကြည့်ရန် (*) ပေါ်သွားပါ။",
