Translations by amaung to translation/my/site/viewoption_translation-my-site.json

--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -9,7 +9,7 @@
   "viewoption:changePaliScript": "ပါဠိအက္ခရာပြောင်းရန်",
   "viewoption:changePaliScriptDescription": "ဤလုပ်ဆောင်ချက်သည် သင့်အား ပါဠိစာများကို ဘာသာအက္ခရာ အမျိုးမျိုးဖြင့်  ဖတ်စေနိုင်ပါသည်။ ",
   "viewoption:changePaliScriptLabel": "စာအက္ခရာများ",
-  "viewoption:chineseLookupDictionaryDisabled": "တရုတ်(汉语)အဘိဓာန် ရှာဖွေမှု ပိတ်ထားသည်။",
+  "viewoption:chineseLookupDictionaryDisabled": "တရုတ်(汉语)အဘိဓာန် ရှာဖွေမှု ပိတ်ထားသည် ",
   "viewoption:displaysInfo": "အတွဲ/စာမျက်နှာအညွှန်းများ၊ မူကွဲစာများ စသဖြင့်တို့ကို ဖော်ပြပါ",
   "viewoption:lineByLine": "တစ်လိုင်းချင်း",
   "viewoption:lookup": "ရှာဖွေရန်",
