Translations by amaung to translation/my/site/viewoption_translation-my-site.json

--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -13,7 +13,7 @@
   "viewoption:displaysInfo": "အတွဲ/စာမျက်နှာအညွှန်းများ၊ မူကွဲစာများ စသဖြင့်တို့ကို ဖော်ပြပါ",
   "viewoption:lineByLine": "တစ်လိုင်းချင်း",
   "viewoption:lookup": "ရှာဖွေရန်",
-  "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ။",
+  "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ ",
   "viewoption:mainRefsDisabled": "အဓိက အညွှန်းများကို ပိတ်ထားသည် ",
   "viewoption:mainRefsEnabled": "အဓိက အညွှန်းများကို ဖွင့်ထားသည် ",
   "viewoption:none": "မရွေးပါ",
