--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -4,7 +4,7 @@
   "viewoption:activatePaliDescription": "ပါဠိစာများကို လေ့လာသုံးသပ်ပြီး အဓိပ္ပါယ်များကို ဖော်ပြထားပါသည်။ အဓိပ္ပါယ်များကို အထောက်အကူပြုအဖြစ် သုံးရန်သာဖြစ်သည်။ အမြဲအတိမကျ မရနိုင်သည်ကို သတိပြုပါ။ စကားလုံး အဓိပ္ပါယ်များမှာ New Concise Pali English Dictionary မှ ဖြစ်သည်။",
   "viewoption:activatePaliLookup": "ပါဠိစကားလုံးရှာဖွေမှု စရန်",
   "viewoption:allRefsDisabled": "အညွှန်းအားလုံး ပိတ်ထားသည် ",
-  "viewoption:allRefsEnabled": "အညွှန်းအားလုံးကို ဖွင့်ထားသည် ",
+  "viewoption:allRefsEnabled": "အညွှန်းအားလုံး ဖွင့်ထားသည် ",
   "viewoption:asterisk": "(*) ပေါ်သွားလျှင် ရှင်းလင်းချက်များကို  တွေ့မည် ",
   "viewoption:changePaliScript": "ပါဠိအက္ခရာပြောင်းရန်",
   "viewoption:changePaliScriptDescription": "ဤလုပ်ဆောင်ချက်သည် သင့်အား ပါဠိစာများကို ဘာသာအက္ခရာ အမျိုးမျိုးဖြင့်  ဖတ်စေနိုင်ပါသည်။ ",
