Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -1,4 +1,5 @@
 {
   "abbreviations:1": "အတိုကောက်များ ",
-  "abbreviations:9": "အတိုကောက်များ စာရင်း "
+  "abbreviations:9": "အတိုကောက်များ စာရင်း ",
+  "abbreviations:11": "အဋ္ဌကဌာ "
 }
