Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -1,5 +1,6 @@
 {
   "abbreviations:1": "အတိုကောက်များ ",
   "abbreviations:9": "အတိုကောက်များ စာရင်း ",
-  "abbreviations:11": "အဋ္ဌကထာ "
+  "abbreviations:11": "အဋ္ဌကထာ ",
+  "abbreviations:12": "Ab "
 }
