Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -2,5 +2,6 @@
   "abbreviations:1": "အတိုကောက်များ ",
   "abbreviations:9": "အတိုကောက်များ စာရင်း ",
   "abbreviations:11": "အဋ္ဌကထာ ",
-  "abbreviations:12": "Ab "
+  "abbreviations:12": "Ab ",
+  "abbreviations:13": "အဘိဓမ္မ "
 }
