--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -1,6 +1,7 @@
 {
   "abbreviations:1": "အတိုကောက်များ ",
   "abbreviations:9": "အတိုကောက်များ စာရင်း ",
+  "abbreviations:10": "-a ",
   "abbreviations:11": "အဋ္ဌကထာ ",
   "abbreviations:12": "Ab ",
   "abbreviations:13": "အဘိဓမ္မ "
