Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -4,5 +4,6 @@
   "abbreviations:10": "-a ",
   "abbreviations:11": "အဋ္ဌကထာ ",
   "abbreviations:12": "Ab ",
-  "abbreviations:13": "အဘိဓမ္မ "
+  "abbreviations:13": "အဘိဓမ္မ ",
+  "abbreviations:14": "ACIP "
 }
