--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -5,5 +5,6 @@
   "abbreviations:11": "အဋ္ဌကထာ ",
   "abbreviations:12": "Ab ",
   "abbreviations:13": "အဘိဓမ္မ ",
-  "abbreviations:14": "ACIP "
+  "abbreviations:14": "ACIP ",
+  "abbreviations:15": "Asian Classics Input Project "
 }
