Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -7,5 +7,6 @@
   "abbreviations:13": "အဘိဓမ္မ ",
   "abbreviations:14": "ACIP ",
   "abbreviations:15": "Asian Classics Input Project ",
-  "abbreviations:16": "AN "
+  "abbreviations:16": "AN ",
+  "abbreviations:18": "Arv "
 }
