--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -9,5 +9,6 @@
   "abbreviations:15": "Asian Classics Input Project ",
   "abbreviations:16": "AN ",
   "abbreviations:18": "Arv ",
-  "abbreviations:20": "As "
+  "abbreviations:20": "As ",
+  "abbreviations:22": "Asc "
 }
