--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -10,5 +10,6 @@
   "abbreviations:16": "AN ",
   "abbreviations:18": "Arv ",
   "abbreviations:20": "As ",
-  "abbreviations:22": "Asc "
+  "abbreviations:22": "Asc ",
+  "abbreviations:24": "Avs "
 }
