--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -11,5 +11,6 @@
   "abbreviations:18": "Arv ",
   "abbreviations:20": "As ",
   "abbreviations:22": "Asc ",
-  "abbreviations:24": "Avs "
+  "abbreviations:24": "Avs ",
+  "abbreviations:26": "Ay "
 }
