Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -12,5 +12,6 @@
   "abbreviations:20": "As ",
   "abbreviations:22": "Asc ",
   "abbreviations:24": "Avs ",
-  "abbreviations:26": "Ay "
+  "abbreviations:26": "Ay ",
+  "abbreviations:28": "BA "
 }
