--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -13,5 +13,6 @@
   "abbreviations:22": "Asc ",
   "abbreviations:24": "Avs ",
   "abbreviations:26": "Ay ",
-  "abbreviations:28": "BA "
+  "abbreviations:28": "BA ",
+  "abbreviations:31": "ဗုဒ္ဓစရိတ "
 }
