Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -13,6 +13,7 @@
   "abbreviations:22": "Asc ",
   "abbreviations:24": "Avs ",
   "abbreviations:26": "Ay ",
+  "abbreviations:27": "အနိယတ ",
   "abbreviations:28": "BA ",
   "abbreviations:31": "ဗုဒ္ဓစရိတ "
 }
