Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -15,5 +15,6 @@
   "abbreviations:26": "Ay ",
   "abbreviations:27": "အနိယတ ",
   "abbreviations:28": "BA ",
-  "abbreviations:31": "ဗုဒ္ဓစရိတ "
+  "abbreviations:31": "ဗုဒ္ဓစရိတ ",
+  "abbreviations:33": "ဘိက္ခုနီ "
 }
