Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -16,5 +16,6 @@
   "abbreviations:27": "အနိယတ ",
   "abbreviations:28": "BA ",
   "abbreviations:31": "ဗုဒ္ဓစရိတ ",
+  "abbreviations:32": "Bi ",
   "abbreviations:33": "ဘိက္ခုနီ "
 }
