--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -15,6 +15,7 @@
   "abbreviations:26": "Ay ",
   "abbreviations:27": "အနိယတ ",
   "abbreviations:28": "BA ",
+  "abbreviations:30": "Bc ",
   "abbreviations:31": "ဗုဒ္ဓစရိတ ",
   "abbreviations:32": "Bi ",
   "abbreviations:33": "ဘိက္ခုနီ "
