Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -19,5 +19,6 @@
   "abbreviations:30": "Bc ",
   "abbreviations:31": "ဗုဒ္ဓစရိတ ",
   "abbreviations:32": "Bi ",
-  "abbreviations:33": "ဘိက္ခုနီ "
+  "abbreviations:33": "ဘိက္ခုနီ ",
+  "abbreviations:35": "ဘိက္ခု "
 }
