--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -20,5 +20,6 @@
   "abbreviations:31": "ဗုဒ္ဓစရိတ ",
   "abbreviations:32": "Bi ",
   "abbreviations:33": "ဘိက္ခုနီ ",
-  "abbreviations:35": "ဘိက္ခု "
+  "abbreviations:35": "ဘိက္ခု ",
+  "abbreviations:38": "CBETA "
 }
