Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -21,5 +21,6 @@
   "abbreviations:32": "Bi ",
   "abbreviations:33": "ဘိက္ခုနီ ",
   "abbreviations:35": "ဘိက္ခု ",
+  "abbreviations:37": "ဗုဒ္ဓဝံသ ",
   "abbreviations:38": "CBETA "
 }
