--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -22,5 +22,6 @@
   "abbreviations:33": "ဘိက္ခုနီ ",
   "abbreviations:35": "ဘိက္ခု ",
   "abbreviations:37": "ဗုဒ္ဓဝံသ ",
-  "abbreviations:38": "CBETA "
+  "abbreviations:38": "CBETA ",
+  "abbreviations:39": "Chinese Buddhist Electronic Text Association "
 }
