Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -23,5 +23,6 @@
   "abbreviations:35": "ဘိက္ခု ",
   "abbreviations:37": "ဗုဒ္ဓဝံသ ",
   "abbreviations:38": "CBETA ",
-  "abbreviations:39": "Chinese Buddhist Electronic Text Association "
+  "abbreviations:39": "Chinese Buddhist Electronic Text Association ",
+  "abbreviations:40": "Cp "
 }
