Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -24,5 +24,6 @@
   "abbreviations:37": "ဗုဒ္ဓဝံသ ",
   "abbreviations:38": "CBETA ",
   "abbreviations:39": "Chinese Buddhist Electronic Text Association ",
-  "abbreviations:40": "Cp "
+  "abbreviations:40": "Cp ",
+  "abbreviations:41": "စရိယပိဋက "
 }
