Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -26,5 +26,6 @@
   "abbreviations:39": "Chinese Buddhist Electronic Text Association ",
   "abbreviations:40": "Cp ",
   "abbreviations:41": "စရိယပိဋက ",
-  "abbreviations:42": "D "
+  "abbreviations:42": "D ",
+  "abbreviations:43": "Derge edition of Tibetan canon "
 }
