Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -27,5 +27,6 @@
   "abbreviations:40": "Cp ",
   "abbreviations:41": "စရိယပိဋက ",
   "abbreviations:42": "D ",
-  "abbreviations:43": "Derge edition of Tibetan canon "
+  "abbreviations:43": "Derge edition of Tibetan canon ",
+  "abbreviations:45": "ဒီဃာဂမ "
 }
