--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -30,5 +30,6 @@
   "abbreviations:43": "Derge edition of Tibetan canon ",
   "abbreviations:44": "DA ",
   "abbreviations:45": "ဒီဃာဂမ ",
-  "abbreviations:46": "DDB "
+  "abbreviations:46": "DDB ",
+  "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် "
 }
