--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -31,5 +31,6 @@
   "abbreviations:44": "DA ",
   "abbreviations:45": "ဒီဃာဂမ ",
   "abbreviations:46": "DDB ",
-  "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် "
+  "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် ",
+  "abbreviations:50": "DH "
 }
