--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -32,5 +32,6 @@
   "abbreviations:45": "ဒီဃာဂမ ",
   "abbreviations:46": "DDB ",
   "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် ",
-  "abbreviations:50": "DH "
+  "abbreviations:50": "DH ",
+  "abbreviations:51": "Dun Huang "
 }
