Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -33,5 +33,6 @@
   "abbreviations:46": "DDB ",
   "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် ",
   "abbreviations:50": "DH ",
-  "abbreviations:51": "Dun Huang "
+  "abbreviations:51": "Dun Huang ",
+  "abbreviations:52": "Dhp "
 }
