--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -34,5 +34,6 @@
   "abbreviations:47": "ဗုဒ္ဓဘာသာ ဒီဂျီတယ် အဘိဓာန် ",
   "abbreviations:50": "DH ",
   "abbreviations:51": "Dun Huang ",
-  "abbreviations:52": "Dhp "
+  "abbreviations:52": "Dhp ",
+  "abbreviations:53": "ဓမ္မပဒ "
 }
