--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -35,5 +35,6 @@
   "abbreviations:50": "DH ",
   "abbreviations:51": "Dun Huang ",
   "abbreviations:52": "Dhp ",
-  "abbreviations:53": "ဓမ္မပဒ "
+  "abbreviations:53": "ဓမ္မပဒ ",
+  "abbreviations:56": "Divy "
 }
