--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -36,5 +36,6 @@
   "abbreviations:51": "Dun Huang ",
   "abbreviations:52": "Dhp ",
   "abbreviations:53": "ဓမ္မပဒ ",
-  "abbreviations:56": "Divy "
+  "abbreviations:56": "Divy ",
+  "abbreviations:83": "ဂရုဓမ္မ "
 }
