--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -37,5 +37,6 @@
   "abbreviations:52": "Dhp ",
   "abbreviations:53": "ဓမ္မပဒ ",
   "abbreviations:56": "Divy ",
-  "abbreviations:83": "ဂရုဓမ္မ "
+  "abbreviations:83": "ဂရုဓမ္မ ",
+  "abbreviations:85": "ဂန္ဒီရီ ဓမ္မပဒ "
 }
