Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -38,5 +38,5 @@
   "abbreviations:53": "ဓမ္မပဒ ",
   "abbreviations:56": "Divy ",
   "abbreviations:83": "ဂရုဓမ္မ ",
-  "abbreviations:85": "ဂန္ဒီရီ ဓမ္မပဒ "
+  "abbreviations:85": "ဂန္ဓာရီ ဓမ္မပဒ "
 }
