Translations by amaung to translation/my/site/abbreviations_translation-my-site.json

--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -36,6 +36,7 @@
   "abbreviations:51": "Dun Huang ",
   "abbreviations:52": "Dhp ",
   "abbreviations:53": "ဓမ္မပဒ ",
+  "abbreviations:54": "Ds ",
   "abbreviations:56": "Divy ",
   "abbreviations:83": "ဂရုဓမ္မ ",
   "abbreviations:85": "ဂန္ဓာရီ ဓမ္မပဒ "
