--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -20,6 +20,7 @@
   "abbreviations:31": "ဗုဒ္ဓစရိတ ",
   "abbreviations:32": "Bi ",
   "abbreviations:33": "ဘိက္ခုနီ ",
+  "abbreviations:34": "Bu ",
   "abbreviations:35": "ဘိက္ခု ",
   "abbreviations:37": "ဗုဒ္ဓဝံသ ",
   "abbreviations:38": "CBETA ",
