--- a/translation/my/site/abbreviations_translation-my-site.json
+++ b/translation/my/site/abbreviations_translation-my-site.json
@@ -22,6 +22,7 @@
   "abbreviations:33": "ဘိက္ခုနီ ",
   "abbreviations:34": "Bu ",
   "abbreviations:35": "ဘိက္ခု ",
+  "abbreviations:36": "Bv ",
   "abbreviations:37": "ဗုဒ္ဓဝံသ ",
   "abbreviations:38": "CBETA ",
   "abbreviations:39": "Chinese Buddhist Electronic Text Association ",
