--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti97:3.1": "E in che modo un cercatore ha una buona virtù? ",
   "iti97:3.2": "Quando un cercatore vive virtuoso, temperato e moderato (contenuto) dal pātimokkha, con una perfetta condotta e compagnia, vedendo il pericolo negli errori più piccoli, addestrandosi con i precetti. ",
   "iti97:4.1": "E in che modo un cercatore ha una buona natura? ",
-  "iti97:4.2": "Qui un cercatore vive devoto alla coltivazione del cuore secondo i sette profili legati all’illuminazione. ",
+  "iti97:4.2": "Quando cercatore vive devoto alla coltivazione del cuore secondo i sette profili legati all’illuminazione. ",
   "iti97:5.1": "E in che modo un cercatore ha una buona sapienza? ",
   "iti97:5.2": "Qui un cercatore grazie all’eliminazione di ogni compulsione arriva e rimane nella liberazione del cuore priva di impulsi, nella liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore*** ",
   "iti97:7.1": "Chi non compie una cattiva azione né con il corpo, né con la parola, ",
