--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti102:2.1": "Io dico che la distruzione degli impulsi è per uno che conosce e vede, non per uno che non conosce e non vede. ",
+  "iti102:2.1": "Io dico che la distruzione delle compulsioni è per uno che conosce e vede, non per uno che non conosce e non vede. ",
   "iti102:2.2": "E come la distruzione...? ",
   "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede la sofferenza, la causa della sofferenza, la fine della sofferenza, e il sentiero che conduce alla fine della sofferenza. ",
   "iti102:3.1": "Al praticante che si allena * ",
