--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti97:5.2": "Quando un cercatore grazie all’eliminazione di ogni compulsione arriva e rimane nella liberazione del cuore priva di compulsioni, nella liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore*** ",
   "iti97:7.1": "Chi non compie una cattiva azione né con il corpo, né con la parola, ",
   "iti97:7.2": "né con la mente, ",
-  "iti97:7.3": "costui è chiamato un cercatore con una buona morale, ",
+  "iti97:7.3": "costui è chiamato un cercatore con una buona virtù, ",
   "iti97:7.4": "con una mente morigerata. ",
   "iti97:8.1": "Chi ha sette qualità ben coltivate, ** ",
   "iti97:8.2": "che conducono alla piena illuminazione ",
