--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -18,7 +18,7 @@
   "iti97:9.2": "personalmente la distruzione della sofferenza, ",
   "iti97:9.3": "costui è chiamato un cercatore con una buona saggezza, ",
   "iti97:9.4": "senza compulsioni. ",
-  "iti97:10.1": "Con tutte le qualità complete, ",
+  "iti97:10.1": "Con tutte le qualità perfezionate (complete), ",
   "iti97:10.2": "indisturbato, libero dal dubbio, ",
   "iti97:10.3": "indipendente dal mondo intero, ",
   "iti97:10.4": "è chiamato uno che ha abbandonato tutto. "
