--- a/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti97_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti97:8.2": "che conducono alla piena illuminazione ",
   "iti97:8.3": "costui è chiamato un cercatore con una buona natura, ",
   "iti97:8.4": "senza eccessi. ",
-  "iti97:9.1": "Chi conosce ",
+  "iti97:9.1": "Chi conosce personalmente ",
   "iti97:9.2": "la distruzione della sofferenza, ",
   "iti97:9.3": "costui è chiamato un cercatore con una buona saggezza, ",
   "iti97:9.4": "senza compulsioni. ",
