Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -14,6 +14,6 @@
   "iti98:5.4": "non farebbe un’offerta quando il momento è opportuno? ",
   "iti98:6.1": "Per quelli che recitano o ascoltano ",
   "iti98:6.2": "con un cuore pieno di fede, ",
-  "iti98:6.3": "solerti nell’insegnamento di chi è giunto a una buona destinazione (Fortunato), ",
+  "iti98:6.3": "solerti nell’insegnamento di chi è giunto a una buona destinazione (il Fortunato), ",
   "iti98:6.4": "la meta suprema viene purificata.” "
 }
