--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.46_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.46_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "sn56.46:0.1": "Verbundene Lehrreden 56.46 ",
   "sn56.46:0.2": "5. Das Kapitel über eine Klippe ",
   "sn56.46:0.3": "Dunkelheit ",
-  "sn56.46:1.1": "„Mönche und Nonnen, die grenzenlose Leere des interstellaren Raumes ist so vollkommen dunkel, dass sogar das Licht von Sonne und Mond, so mächtig und gewaltig, keinen Eindruck macht.“ ",
+  "sn56.46:1.1": "„Mönche und Nonnen, die grenzenlose Leere des interstellaren Raumes ist so vollkommen dunkel, dass sogar das Licht von Mond und Sonne, so mächtig und gewaltig, keinen Eindruck macht.“ ",
   "sn56.46:2.1": "Daraufhin sagte einer der Mönche zum Buddha: ",
   "sn56.46:2.2": "„Herr, diese Dunkelheit ist wirklich gewaltig, so überaus gewaltig. ",
   "sn56.46:2.3": "Gibt es eine andere Dunkelheit, die noch gewaltiger und schrecklicher ist als diese?“ ",
