Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -105,5 +105,6 @@
   "mn79:17.2": "Welches dieser beiden besitzt den vortrefflicheren und erleseneren Glanz: der Vollmond um Mitternacht am klaren und wolkenlosen Himmel am Besinnungstag, dem fünfzehnten Tag, oder die Mittagssonne am klaren und wolkenlosen Himmel im letzten Monat der Regenzeit, zur Herbstzeit?“ ",
   "mn79:17.3": "„Die Mittagssonne am klaren und wolkenlosen Himmel im letzten Monat der Regenzeit, zur Herbstzeit, Herr.“ ",
   "mn79:18.1": "„Darüber hinaus, Udāyī, kenne ich sehr viele Götter, auf die das Licht von Mond und Sonne keinen Eindruck macht. ",
-  "mn79:18.2": "Dennoch sage ich nicht: "
+  "mn79:18.2": "Dennoch sage ich nicht: ",
+  "mn79:18.3": "‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ "
 }
