Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -107,5 +107,6 @@
   "mn79:18.1": "„Darüber hinaus, Udāyī, kenne ich sehr viele Götter, auf die das Licht von Mond und Sonne keinen Eindruck macht. ",
   "mn79:18.2": "Dennoch sage ich nicht: ",
   "mn79:18.3": "‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ ",
-  "mn79:18.4": "Aber zu einem Glanz, der geringer ist als der eines Glühwürmchens, sagst du: ‚Das ist derer höchste Glanz.‘ Und du beschreibst diesen Glanz nicht.“ "
+  "mn79:18.4": "Aber zu einem Glanz, der geringer ist als der eines Glühwürmchens, sagst du: ‚Das ist derer höchste Glanz.‘ Und du beschreibst diesen Glanz nicht.“ ",
+  "mn79:19.1": "„Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!“ "
 }
