Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -109,5 +109,6 @@
   "mn79:18.3": "‚Der höchste Glanz ist der Glanz, verglichen mit dem kein anderer Glanz höher oder erlesener ist.‘ ",
   "mn79:18.4": "Aber zu einem Glanz, der geringer ist als der eines Glühwürmchens, sagst du: ‚Das ist derer höchste Glanz.‘ Und du beschreibst diesen Glanz nicht.“ ",
   "mn79:19.1": "„Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!“ ",
-  "mn79:19.2": "„Aber Udāyī, warum sagst du: "
+  "mn79:19.2": "„Aber Udāyī, warum sagst du: ",
+  "mn79:19.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ "
 }
