Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -111,5 +111,6 @@
   "mn79:19.1": "„Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!“ ",
   "mn79:19.2": "„Aber Udāyī, warum sagst du: ",
   "mn79:19.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ ",
-  "mn79:19.4": "„Herr, in unserer eigenen Tradition heißt es: "
+  "mn79:19.4": "„Herr, in unserer eigenen Tradition heißt es: ",
+  "mn79:19.5": "‚Das ist der höchste Glanz, das ist der höchste Glanz.‘ "
 }
