--- a/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti90_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti90:2.2": "Quali tre? ",
   "iti90:2.3": "Tra tutte le creature che ci possano essere, senza piedi, con due piedi, quattro piedi, mille piedi, con il corpo o senza corpo, coscienti, non coscienti, o né coscienti né non coscienti, colui che è arrivato alla verità, l’Arahant, il Buddha perfettamente risvegliato è considerato superiore a ogni altro. ",
   "iti90:2.4": "Quelli che han fede nel Buddha, han fede nel supremo. ",
-  "iti90:2.5": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
+  "iti90:2.5": "Quando si ha fede nel supremo, si ottiene un risultato supremo. ",
   "iti90:3.1": "Tra tutte le cose condizionate (creati) o incondizionate (non creati) ci possano essere, la fine della passione, ovvero la disintossicazione, la rimozione dell’arsura, l’eradicazione della dipendenza, la rottura del ciclo dell’esistenza, la distruzione della sete, la fine della passione, la cessazione, il Nibbāna, è considerato la cosa superiore a ogni altro. ",
   "iti90:3.2": "Quelli che han fede nel Dhamma che porta alla fine della passione, han fede nel supremo. ",
   "iti90:3.3": "Quando si ha fede nel supremo si ottiene un risultato supremo. ",
