--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -113,5 +113,6 @@
   "mn79:19.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ ",
   "mn79:19.4": "„Herr, in unserer eigenen Tradition heißt es: ",
   "mn79:19.5": "‚Das ist der höchste Glanz, das ist der höchste Glanz.‘ ",
-  "mn79:19.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet.“ "
+  "mn79:19.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet.“ ",
+  "mn79:20.1": "„Aber Udāyī, gibt es eine Welt von reinem Glück? Und gibt es einen begründeten Weg, um eine Welt von reinem Glück zu verwirklichen?“ "
 }
