Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -116,5 +116,6 @@
   "mn79:19.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet.“ ",
   "mn79:20.1": "„Aber Udāyī, gibt es eine ausschließlich glückliche Welt? Und gibt es eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:20.2": "„Herr, in unserer eigenen Tradition heißt es: ",
-  "mn79:20.3": "‚Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.‘“ "
+  "mn79:20.3": "‚Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.‘“ ",
+  "mn79:21.1": "„Nun, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ "
 }
