--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -1,4 +1,5 @@
 {
   "iti76:0.1": "Taip bylota 76 ",
-  "iti76:0.2": "Trejetukų knyga "
+  "iti76:0.2": "Trejetukų knyga ",
+  "iti76:0.3": "3. Trečiasis skyrius "
 }
