Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -4,5 +4,6 @@
   "iti76:0.3": "3. Trečiasis skyrius ",
   "iti76:0.4": "Laimės siekis ",
   "iti76:1.1": "Aš girdėjau, kad taip tikrai bylojo Palaimintasis, taip bylojo _Arahantas_: ",
-  "iti76:2.1": "„Išminčius, vienuoliai, saugo dorovę siekdamas trijų rūšių laimės. "
+  "iti76:2.1": "„Išminčius, vienuoliai, saugo dorovę siekdamas trijų rūšių laimės. ",
+  "iti76:2.2": "Kokių trijų? "
 }
