Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -7,5 +7,6 @@
   "iti76:2.1": "„Išminčius, vienuoliai, saugo dorovę siekdamas trijų rūšių laimės. ",
   "iti76:2.2": "Kokių trijų? ",
   "iti76:2.3": "Galvodamas: „Tebūnu gyriamas,” – išminčius saugo dorovę. Galvodamas: „Tepraturtėju,” – išminčius saugo dorovę. Galvodamas: „Po kūno žūties, po mirties teatgimstu geroje vietoje, danguje,” – išminčius saugo dorovę. ",
-  "iti76:2.4": "„Išminčius, vienuoliai, saugo dorovę siekdamas šių trijų rūšių laimės. "
+  "iti76:2.4": "„Išminčius, vienuoliai, saugo dorovę siekdamas šių trijų rūšių laimės. ",
+  "iti76:2.5": "Apie tai Palaimintasis kalbėjo. "
 }
