Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -12,5 +12,6 @@
   "iti76:2.6": "Taip pasakyta apie tai: ",
   "iti76:3.1": "„Išmaningasis saugo dorovę ",
   "iti76:3.2": "siekdamas trijų rūšių laimės: ",
-  "iti76:3.3": "pagyrų, pralobimo ir "
+  "iti76:3.3": "pagyrų, pralobimo ir ",
+  "iti76:3.4": "džiaugsmo danguje vėliau. "
 }
