Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti91_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti91_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti91_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti91:2.5": "Ma solo perché riflettono: “sono vittima di nascita, vecchiaia, morte, tristezza, disperazione, sofferenza, dispiacere e afflizione. Sono una vittima della sofferenza, circondato dalla sofferenza, ",
   "iti91:2.6": "forse potrebbe essere possibile portare a termine questa intera massa di sofferenza.” ",
   "iti91:2.7": "In questo modo un giovane di buona famiglia rinuncia al mondo. ",
-  "iti91:2.8": "Ma chi ha smania, passioni veementi, dal cuore avverso*, dalle intenzioni malevoli  [odio/astio], sbadato, incosciente (inconsapevole?), distratto, sovrappensiero e con delle abilità mediocri, ",
+  "iti91:2.8": "Ma chi ha smania, passioni veementi, dal cuore avverso*, dalle intenzioni malevoli  [odio/astio], sbadato, non presente (inconsapevole?), distratto, sovrappensiero e con delle abilità mediocri, ",
   "iti91:2.9": "è come della legna usata per accendere una pira funeraria: bruciata su ambo i lati, ricoperta in mezzo di escrementi, non è utile ne’ per alimentare un fuoco in città, ne’ nella foresta. ",
   "iti91:2.10": "Io vi dico che, allo stesso modo, questa persona ha buttato via le gioie dei laici senza portare a termine l’obiettivo della vita ascetica (del monachesimo). ",
   "iti91:3.1": "Chi butta via le gioie dei laici, ",
