Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -15,5 +15,6 @@
   "iti76:3.3": "pagyrų, pralobimo ir ",
   "iti76:3.4": "džiaugsmo danguje vėliau. ",
   "iti76:4.1": "Net jei kas ir nedaro blogo, ",
-  "iti76:4.2": "bet draugauja su tuo, kuris daro, "
+  "iti76:4.2": "bet draugauja su tuo, kuris daro, ",
+  "iti76:4.3": "jį įtaria bloguose darbuose "
 }
