Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -19,5 +19,6 @@
   "iti76:4.3": "jį įtaria bloguose darbuose, ",
   "iti76:4.4": "ir auga jo prasta reputacija. ",
   "iti76:5.1": "Kokius draugus žmogus turi, ",
-  "iti76:5.2": "su kuo bendrauja, "
+  "iti76:5.2": "su kuo bendrauja, ",
+  "iti76:5.3": "toks pats ir yra, "
 }
