Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -21,5 +21,6 @@
   "iti76:5.1": "Kokius draugus žmogus turi, ",
   "iti76:5.2": "su kuo bendrauja, ",
   "iti76:5.3": "toks pats ir yra, ",
-  "iti76:5.4": "juk gyvenantieji drauge yra panašūs. "
+  "iti76:5.4": "juk gyvenantieji drauge yra panašūs. ",
+  "iti76:6.1": "Bendraujantis ir tas, su kuriuo bendrauja, "
 }
