Publishing translations for translation/my/site/viewoption_translation-my-site (#3836)

--- a/translation/my/site/viewoption_translation-my-site.json
+++ b/translation/my/site/viewoption_translation-my-site.json
@@ -3,15 +3,19 @@
   "viewoption:activateChineseLookup": "တရုတ်စကားလုံး ရှာဖွေမှု စရန်",
   "viewoption:activatePaliDescription": "ပါဠိစာများကို လေ့လာသုံးသပ်ပြီး အဓိပ္ပါယ်များကို ဖော်ပြထားပါသည်။ အဓိပ္ပါယ်များကို အထောက်အကူပြုအဖြစ် သုံးရန်သာဖြစ်သည်။ အမြဲအတိမကျ မရနိုင်သည်ကို သတိပြုပါ။ စကားလုံး အဓိပ္ပါယ်များမှာ New Concise Pali English Dictionary မှ ဖြစ်သည်။",
   "viewoption:activatePaliLookup": "ပါဠိစကားလုံးရှာဖွေမှု စရန်",
-  "viewoption:asterisk": "မှတ်ချက်များကို (*) ပေါ်တွင်ဖော်ပြမည်",
+  "viewoption:allRefsDisabled": "အညွှန်းအားလုံး ပိတ်ထားသည် ",
+  "viewoption:allRefsEnabled": "အညွှန်းအားလုံး ဖွင့်ထားသည် ",
+  "viewoption:asterisk": "(*) ပေါ်သွားလျှင် ရှင်းလင်းချက်များကို  တွေ့မည် ",
   "viewoption:changePaliScript": "ပါဠိအက္ခရာပြောင်းရန်",
   "viewoption:changePaliScriptDescription": "ဤလုပ်ဆောင်ချက်သည် သင့်အား ပါဠိစာများကို ဘာသာအက္ခရာ အမျိုးမျိုးဖြင့်  ဖတ်စေနိုင်ပါသည်။ ",
   "viewoption:changePaliScriptLabel": "စာအက္ခရာများ",
-  "viewoption:chineseLookupDictionaryDisabled": "တရုတ်(汉语)အဘိဓာန် ရှာဖွေမှု ပိတ်ထားသည်။",
+  "viewoption:chineseLookupDictionaryDisabled": "တရုတ်(汉语)အဘိဓာန် ရှာဖွေမှု ပိတ်ထားသည် ",
   "viewoption:displaysInfo": "အတွဲ/စာမျက်နှာအညွှန်းများ၊ မူကွဲစာများ စသဖြင့်တို့ကို ဖော်ပြပါ",
   "viewoption:lineByLine": "တစ်လိုင်းချင်း",
   "viewoption:lookup": "ရှာဖွေရန်",
-  "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ။",
+  "viewoption:lookupDictionaryEnabled": "{lookupDictionary} အဘိဓာန်ရှာဖွေမှု စနိုင်ပြီ ",
+  "viewoption:mainRefsDisabled": "အဓိက အညွှန်းများ ပိတ်ထားသည် ",
+  "viewoption:mainRefsEnabled": "အဓိက အညွှန်းများ ဖွင့်ထားသည် ",
   "viewoption:none": "မရွေးပါ",
   "viewoption:noteDescription": "ဇာစ်မြစ်စာများအတွက် ဘာသာပြန်များနှင့် မူကွဲဖတ်စာများအပေါ်ရေးထားသော မှတ်ချက်များရှိခဲ့လျှင် ကြည့်နိုင်ပါသည်။",
   "viewoption:noteDisplayTypeToastAsterisk": "မှတ်စုများ ကြည့်ရန် (*) ပေါ်သွားပါ။",
@@ -29,10 +33,10 @@
   "viewoption:rememberSettings": "စက်တင်များကို မှတ်ထားပါ။",
   "viewoption:scriptChanged": "ယခုပါဠိကို {paliScript} အက္ခရာဖြင့် ဖော်ပြထားသည်။",
   "viewoption:showHighlighting": "ထင်ထင်ရှားရှားပြသောစာ - အရေးကြီး အသေးစိတ်အချက်များ",
-  "viewoption:showHighlightingTitle": "ထင်ထင်ရှားရှားဖော်ပြပါ",
   "viewoption:showHighlightingDescription": "သက်ဆိုင်ရာနေရာများတွင် စာမူကွဲများ၊ အမှားပြင်ဆင်ချက်များ၊ တည်ဆောက်ထားပုံ အစရှိသည့်အသေးစိတ်စာသားများကို ထင်ထင်ရှားရှားဖော်ပြပါ။",
   "viewoption:showHighlightingDisabled": "ထင်ထင်ရှားရှား စာဖော်ပြခြင်း ကိုပိတ်ထားသည်။",
   "viewoption:showHighlightingEnabled": "ထင်ထင်ရှားရှား စာဖော်ပြခြင်း ကိုဖွင့်ထားသည်။",
+  "viewoption:showHighlightingTitle": "ထင်ထင်ရှားရှားဖော်ပြပါ",
   "viewoption:sideBySide": "ဘေးချင်းယှဉ်လျက်",
   "viewoption:sidenotes": "မှတ်စုများကို ဘေးတွင်ဖော်ပြရန်",
   "viewoption:textView": "မူရင်းစာနှင့် ဘာသာပြန်",
