Translations by Piyadassii to translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json

--- a/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/kn/iti/vagga8/iti76_translation-lt-piyadassi.json
@@ -22,5 +22,5 @@
   "iti76:5.2": "su kuo bendrauja, ",
   "iti76:5.3": "toks pats ir yra, ",
   "iti76:5.4": "juk gyvenantieji drauge yra panašūs. ",
-  "iti76:6.1": "Bendraujantis ir tas, su kuriuo bendrauja, "
+  "iti76:6.1": "Žmogus bendraujantis ir tas, su kuriuo bendrauja, "
 }
