Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti98:2.2": "un dono materiale e il dono del Dhamma. ",
   "iti98:2.3": "Tra questi due doni il migliore è il dono del Dhamma. ",
   "iti98:3.1": "Ci sono due tipi di condivisioni: ",
-  "iti98:3.2": "una condivisioni materiale e una condivisione del Dhamma. ",
+  "iti98:3.2": "una condivisione materiale e una condivisione del Dhamma. ",
   "iti98:3.3": "* ",
   "iti98:4.1": "Ci sono due tipi di aiuti: ",
   "iti98:4.2": "un aiuto materiale e un aiuto del Dhamma. ",
